Illustfolio3: fix profile icons on ios chrome

--- a/illustfolio3/sass/core/_core.scss
+++ b/illustfolio3/sass/core/_core.scss
@@ -299,7 +299,10 @@
 
         img {
             vertical-align: middle;
-            height: auto;
+            display: block;
+            margin: auto;
+            line-height: 100%;
+            height: 100%;
         }
     }
 
